fix news header alignment

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1003,12 +1003,12 @@ div#signage {
 #news h1 {
   margin-top: 3em;
   margin-bottom: 0;
-  text-align: center;
+  text-align: left;
   color: teal;
   text-transform: uppercase;
   width: 100%;
   background: rgba(255, 255, 255, 0.5);
-  padding: 20px;
+  padding: 20px 3em;
 }
 
 .newsItem {
